--- a/WX001.md
+++ b/WX001.md
@@ -1,6 +1,12 @@
 # YangGuang
 //学习借鉴一个微信小程序。借鉴地址：https://github.com/yllg/WXxcx
-/n/n
-1、这个git账号建立很久了，但这是我第一次使用。特留记录/n
-2、了解生活小程序（参考其结构）/n
-3、学习/n
+
+1、这个git账号建立很久了，但这是我第一次使用。特留记录
+    
+    第一个难点竟然不知道此编辑文本如何换行。。。。。。
+    
+    叫Y的项目名称也学会了更改，改成wx001吧
+  
+2、了解生活小程序（参考其结构）
+
+3、学习
