--- a/WX001.md
+++ b/WX001.md
@@ -10,3 +10,7 @@
 2、了解生活小程序（参考其结构）
 
 3、学习
+
+一、知识要点
+
+跳转路由：wx.navigateBack(Object object)  wx.navigateTo(Object object)  wx.redirectTo(Object object)  wx.reLaunch(Object object)  wx.switchTab(Object object)
